<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.shoeDetails.ShoeDetailsFragment">

    <data>
        <variable
            name="shoeDetailsModel"
            type="com.udacity.shoestore.shoeDetails.ShoeDetailsModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:afterTextChanged="@{shoeDetailsModel.updateName}"
            android:drawableStart="@drawable/shoe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/EditBox"/>

        <EditText
            android:id="@+id/size"
            android:hint="@string/enter_size"
            android:inputType="numberDecimal"
            android:afterTextChanged="@{shoeDetailsModel.updateSize}"
            android:drawableStart="@drawable/size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            style="@style/EditBox"/>

        <EditText
            android:id="@+id/company"
            android:hint="@string/enter_company"
            android:inputType="text"
            android:afterTextChanged="@{shoeDetailsModel.updateCompany}"
            android:drawableStart="@drawable/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size"
            style="@style/EditBox"/>

        <EditText
            android:id="@+id/description"
            android:hint="@string/enter_description"
            android:inputType="textMultiLine"
            android:afterTextChanged="@{shoeDetailsModel.updateDescription}"
            android:drawableStart="@drawable/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company"
            style="@style/EditBox"/>

        <EditText
            android:id="@+id/image"
            android:hint="@string/enter_image_name"
            android:afterTextChanged="@{shoeDetailsModel.updateImage}"
            android:drawableStart="@drawable/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            style="@style/EditBox"/>

        <Button
            android:id="@+id/submit"
            android:onClick="@{() -> shoeDetailsModel.onSubmitClick()}"
            android:text="@string/submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancel"
            app:layout_constraintTop_toBottomOf="@+id/image"
            style="@style/small_button"/>

        <Button
            android:id="@+id/cancel"
            android:onClick="@{() -> shoeDetailsModel.onCancel()}"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/submit"
            app:layout_constraintTop_toBottomOf="@+id/image"
            style="@style/small_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
